form spacing fix

--- a/css/ifx-2021.css
+++ b/css/ifx-2021.css
@@ -1253,7 +1253,7 @@ div#main {
           background-size: 25px; }
         .ifx-row-form .form__wrapper .form__single .gform_wrapper .gform_body ul li .ginput_container.ginput_complex span {
           margin-bottom: 0; }
-          @media (max-width: 767px) {
+          @media (max-width: 641px) {
             .ifx-row-form .form__wrapper .form__single .gform_wrapper .gform_body ul li .ginput_container.ginput_complex span {
               padding: 0; } }
           @media (max-width: 641px) {
